libs/@local/hashql/ast/tests/ui/lower/sanitizer/special-form-value.jsonc
//@ run: fail
//@ description: Ensure that special forms in invalid value positions are sanitized and error out
[
  "`+`",
  "::kernel::special_form::let",
  //~^ ERROR Special form cannot be used as a value
  { "#literal": 1 }
]
